<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground"
    tools:context=".fragment.FragmentAdd">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/add_header_bg"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="@dimen/layout_height_new_expense">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/plus"
            android:drawablePadding="15dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_vertical"
            android:text="New Expense"
            android:textSize="@dimen/textSize_Add_addBudget"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="@dimen/layout_height_add_new_expense"
        app:layout_constraintTop_toBottomOf="@+id/layout_header"
        app:layout_constraintBottom_toBottomOf="@+id/layout_header"
        android:background="@drawable/bg_header1"
        >

        <ImageView
            android:id="@+id/img_add_expense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/add_expense"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_img_add_expense"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/tv_add_new_expense"
            android:textSize="@dimen/textSize_add_new_Expense"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_add_expense"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Spinner
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint"
        android:layout_marginEnd="50dp"
        android:id="@+id/sp_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:background="@drawable/spinner_bg"
        />

    <EditText
        android:id="@+id/edt_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sp_type"
        android:hint="@string/hint_label"
        android:textSize="@dimen/textSize_label"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/label"
        />

    <EditText
        android:id="@+id/edt_description"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_label"
        android:hint="@string/hint_description"
        android:textSize="@dimen/textSize_description"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/description"
        />

    <EditText
        android:id="@+id/edt_amount"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_description"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:textSize="@dimen/textSize_amount"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/money"
        />

    <TextView
        android:id="@+id/tv_datetime"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_amount"
        android:hint="@string/hint_date"
        android:textSize="@dimen/textSize_date"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/schedule"
        />

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_datetime"
        app:layout_constraintStart_toStartOf="@id/edt_amount"
        android:paddingLeft="10dp"
        android:text="@string/tv_cancel"
        android:textSize="@dimen/textSize_cancel"
        android:fontFamily="@font/aclonica"
        android:drawableStart="@drawable/cancell"
        android:gravity="center"
        android:background="@drawable/bg_button"
        />

    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_datetime"
        app:layout_constraintEnd_toEndOf="@id/edt_amount"
        android:text="Save"
        android:paddingLeft="10dp"
        android:fontFamily="@font/aclonica"
        android:drawableStart="@drawable/check"
        android:gravity="center_vertical"
        android:drawablePadding="5dp"
        android:textSize="@dimen/textSize_save"
        android:background="@drawable/bg_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>